# Logger

./: CMakeLists.txt  README.md
Logger/: CMakeLists.txt
Logger/include/: Logger.hpp
sampleapplication/: CMakeLists.txt  main.cpp
